# KPI-DSP

./: .gitignore  CMakeLists.txt  README.md  jpeg_decoder.cpp  jpeg_encoder.cpp  main.cpp  pip_requirements.txt
dsp/: dct.cpp  dct.h  filtering.cpp  filtering.h  fourier_transform.cpp  mel_filterbank.cpp  mel_filterbank.h  spectrum_analysis.cpp  spectrum_analysis.h
image_compression/: jpeg.cpp  jpeg.h  jpeg_compress.cpp  rle.h  rle_compress.cpp  rle_decompress.cpp
scripts/: clean.sh  run.sh  setup.sh
utils/: timeops.cpp  timeops.h
